# CryptoFortress

./: LICENSE  README.md
go-backend/: Makefile  README.md  docker-compose.yml  go-backend_test.go  go.mod  integration_test.go  rust_integration.go  rust_integration_example.go  test-services.sh
go-backend/audit/: Dockerfile  README.md
go-backend/audit/cmd/: main.go
go-backend/audit/internal/config/: config.go
go-backend/audit/internal/handlers/: audit_handler.go  compliance_handler.go  routes.go  siem_handler.go
go-backend/audit/internal/server/: server.go
go-backend/audit/internal/services/: audit_service.go  compliance_service.go  services.go  siem_service.go
go-backend/auth/: Dockerfile  README.md
go-backend/auth/cmd/: main.go
go-backend/auth/internal/config/: config.go
go-backend/auth/internal/handlers/: auth_handler.go  mfa_handler.go  rbac_handler.go  routes.go
go-backend/auth/internal/middleware/: auth.go  (+1 more)
go-backend/encryption/: Dockerfile  README.md
go-backend/encryption/cmd/: main.go
go-backend/keymgmt/: Dockerfile  README.md
go-backend/keymgmt/cmd/: main.go
python-ai/: README.md  ai_client.py  docker-compose.yml  requirements.txt  test-ai-services.py  test_ai_layer.py  verify-ai-structure.py
python-ai/risk_assessment/: Dockerfile  requirements.txt
python-ai/risk_assessment/src/: main.py
python-ai/security_recommender/: Dockerfile  requirements.txt
python-ai/security_recommender/src/: main.py
python-ai/threat_detection/: Dockerfile  requirements.txt
python-ai/threat_detection/src/: main.py
react-frontend/: Dockerfile  nginx.conf  package.json
react-frontend/__tests__/: App.test.js
react-frontend/src/: App.js
react-frontend/src/services/: api.js
rust-core/: Cargo.toml
rust-core/crypto-engine/: Cargo.toml
rust-core/crypto-engine/src/: lib.rs
rust-core/ffi-bridge/: Cargo.toml
rust-core/ffi-bridge/src/: lib.rs
rust-core/performance-opt/: Cargo.toml
rust-core/performance-opt/src/: lib.rs
rust-core/tests/: integration.rs
(+28 files in other folders)
