[workspace]
members = [
    "crypto-engine",
    "ffi-bridge",
    "performance-opt"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CryptoFortress Team"]
description = "Enterprise-grade cryptography engine"
repository = "https://github.com/cryptofortress/cryptofortress"
license = "MIT"

[workspace.dependencies]
# Cryptography
ring = "0.17"
rustls = "0.21"
aes = "0.8"
chacha20poly1305 = "0.10"
rsa = "0.9"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
zeroize = "1.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Testing
criterion = "0.5"

# WebAssembly
wasm-bindgen = "0.2"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Node.js bindings
neon = "0.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true